Exp-1/output/f00672_generate_speech_test.err
  File "output/f00672_generate_speech_test.py", line 3
    import assert
           ^
SyntaxError: invalid syntax
